OpenVDB Version History
=======================

Version 5.1.0 - In development

    New features:
    - Added a header_test Makefile target that checks library header files
      for dependencies on missing or indirectly included headers.
      [Contributed by Dan Bailey]

    Improvements:
    - zeroVal() now returns a zero matrix instead of an identity matrix
      for Mat4s and Mat4d, and it is now also defined (and returns
      a zero matrix) for Mat3s and Mat3d.
    - Added support for Mat3s and Mat3d point data typed attributes.
      [Contributed by Dan Bailey]

    Houdini:
    - Added options to the Clip SOP to expand or shrink the clipping region
      and, when clipping to a camera frustum, to set the near and far
      clipping planes.
    - Added output grid naming options to the Points Convert SOP.
    - Added a Keep Original Geometry toggle to the Points Convert SOP
      and improved the efficiency of point unpacking.
      [Contributed by Dan Bailey]
    - Added a SOP_NodeVDB::evalStdString() method that facilitates
      string parameter evaluation in expressions, e.g.,
      matchGroup(*gdp, evalStdString("group", time)).
    - Removed the deprecated openvdb_houdini::validateGeometry() function.
      Use convertGeometry() instead.
    - Added a SOP_NodeVDB::matchGroup() overload that eliminates the need
      to const_cast the GU_Detail.
      [Contributed by Jeff Lait]
    - Grid transforms are now more aggressively simplified, making it
      less likely to produce nonuniform voxels erroneously.
      [Contributed by Jeff Lait]
    - Added a houdini_utils::OpFactory::setVerb() method to register
      compilable SOPs.
    - Made SOP_NodeVDB::cookMySop() final (that is, non-overridable)
      to facilitate the implementation of compilable SOPs.
      Override SOP_NodeVDB::cookVDBSop() instead.  (In most cases,
      it suffices to rename cookMySop to cookVDBSop.)
    - Renamed some parameters on the following SOPs to match the equivalent