@@ -728,15 +728,17 @@ createTypedMetadataFromAttribute(const GA_Attribute* const attribute, const uint
 }
 
 template<typename HoudiniType, typename ValueType>
-GA_Defaults buildDefaults(const ValueType& value)
+GA_Defaults
+buildDefaults(const ValueType& value)
 {
-    HoudiniType	values[1];
+    HoudiniType values[1];
     values[0] = value;
     return GA_Defaults(values, 1);
 }
 
 template<>
-GA_Defaults buildDefaults<int32>(const openvdb::math::Vec3<int>& value)
+GA_Defaults
+buildDefaults<int32>(const openvdb::math::Vec3<int>& value)
 {
     int32 values[3];
     for (unsigned i = 0; i < 3; ++i) {
@@ -746,7 +748,8 @@ GA_Defaults buildDefaults<int32>(const openvdb::math::Vec3<int>& value)
 }
 
 template<>
-GA_Defaults buildDefaults<fpreal32>(const openvdb::math::Vec3<float>& value)
+GA_Defaults
+buildDefaults<fpreal32>(const openvdb::math::Vec3<float>& value)
 {
     fpreal32 values[3];
     for (unsigned i = 0; i < 3; ++i) {
@@ -756,7 +759,8 @@ GA_Defaults buildDefaults<fpreal32>(const openvdb::math::Vec3<float>& value)
 }
 
 template<>
-GA_Defaults buildDefaults<fpreal64>(const openvdb::math::Vec3<double>& value)
+GA_Defaults
+buildDefaults<fpreal64>(const openvdb::math::Vec3<double>& value)
 {
     fpreal64 values[3];
     for (unsigned i = 0; i < 3; ++i) {
@@ -766,7 +770,8 @@ GA_Defaults buildDefaults<fpreal64>(const openvdb::math::Vec3<double>& value)
 }
 
 template<>
-GA_Defaults buildDefaults<fpreal32>(const openvdb::math::Quat<float>& value)
+GA_Defaults
+buildDefaults<fpreal32>(const openvdb::math::Quat<float>& value)
 {
     fpreal32 values[4];
     for (unsigned i = 0; i < 4; ++i) {
@@ -776,7 +781,8 @@ GA_Defaults buildDefaults<fpreal32>(const openvdb::math::Quat<float>& value)
 }
 
 template<>
-GA_Defaults buildDefaults<fpreal64>(const openvdb::math::Quat<double>& value)
+GA_Defaults
+buildDefaults<fpreal64>(const openvdb::math::Quat<double>& value)
 {
     fpreal64 values[4];
     for (unsigned i = 0; i < 4; ++i) {
@@ -786,7 +792,8 @@ GA_Defaults buildDefaults<fpreal64>(const openvdb::math::Quat<double>& value)
 }
 
 template<>
-GA_Defaults buildDefaults<fpreal32>(const openvdb::math::Mat3<float>& value)
+GA_Defaults
+buildDefaults<fpreal32>(const openvdb::math::Mat3<float>& value)
 {
     fpreal32 values[9];
     const float* data = value.asPointer();
@@ -797,7 +804,8 @@ GA_Defaults buildDefaults<fpreal32>(const openvdb::math::Mat3<float>& value)
 }
 
 template<>
-GA_Defaults buildDefaults<fpreal64>(const openvdb::math::Mat3<double>& value)
+GA_Defaults
+buildDefaults<fpreal64>(const openvdb::math::Mat3<double>& value)
 {
     fpreal64 values[9];
     const double* data = value.asPointer();
@@ -808,7 +816,8 @@ GA_Defaults buildDefaults<fpreal64>(const openvdb::math::Mat3<double>& value)
 }
 
 template<>
-GA_Defaults buildDefaults<fpreal32>(const openvdb::math::Mat4<float>& value)
+GA_Defaults
+buildDefaults<fpreal32>(const openvdb::math::Mat4<float>& value)
 {
     fpreal32 values[16];
     const float* data = value.asPointer();
@@ -819,7 +828,8 @@ GA_Defaults buildDefaults<fpreal32>(const openvdb::math::Mat4<float>& value)
 }
 
 template<>
-GA_Defaults buildDefaults<fpreal64>(const openvdb::math::Mat4<double>& value)
+GA_Defaults
+buildDefaults<fpreal64>(const openvdb::math::Mat4<double>& value)
 {
     fpreal64 values[16];
     const double* data = value.asPointer();
